--- a/src/core/config/configuredCalls.json
+++ b/src/core/config/configuredCalls.json
@@ -7,7 +7,8 @@
                 "id": "id",
                 "name": "nome",
                 "username": "utente",
-                "email": "email"
+                "email": "email",
+                "address.street": "indirizzo.via"
             }
         },        
         {
